Update title and GAS URL in index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>COT — Reporte Digital v20</title>
+<title>COT — Reporte Digital v21</title>
 <meta name="color-scheme" content="light">
 <style>
-  :root{
+  :root{f
     --bg:#f6f8fb; --surface:#ffffff; --ink:#0f172a; --muted:#64748b; --line:#e5e7eb;
     --brand:#0b74c7; --danger:#b91c1c;
     --radius:10px; --pad:10px; --gap:4px; --thin:1px;
@@ -834,7 +834,7 @@ function validForm(){
 /* =========================
    GAS endpoint
 ========================= */
-const GAS_URL = 'https://script.google.com/macros/s/AKfycbwOBmhU1FWXjDF9qfDeX_zNr3SkJPIHiElcQP_7LvZHZLX1tT0bkEuZDkRCy7JS_FWl/exec';
+const GAS_URL = 'https://script.google.com/macros/s/AKfycbxlEu5Szqa3DwzGfEKZ91FONufd_DOovzgUH8pHFkTYXIz1licfKVZaRdJM56dl1KwFfg/exec';
 
 function buildPayloadJSON(uploadMap, plantaDocId){
   const gen = {};
