--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ let plantaDoc = null;            // {name,file,size,mimeType,isImg} | null
 async function startResumableSessionViaGAS(fileName, parentId, size, mime){
   const r = await fetch(GAS_URL, {
     method: 'POST',
-    headers: { 'Content-Type':'application/json' },
+    headers: { 'Content-Type':'text/plain;charset=utf-8' },
     body: JSON.stringify({
       op: 'new_session',
       name: fileName,
